kubernetes/production/envs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-commerce-coupon
  namespace: core-commerce
spec:
  template:
    spec:
      containers:
        - name: core-commerce-coupon
