kubernetes/production/pgpool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-commerce-coupon
  namespace: core-commerce
spec:
  selector:
    matchLabels:
      app: core-commerce-coupon
  template:
    metadata:
      labels:
        app: core-commerce-coupon
    spec:
      containers:
        - name: core-commerce-coupon-pg-proxy
          image: 164740115373.dkr.ecr.sa-east-1.amazonaws.com/sre-postgres-pgpool:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          readinessProbe:
            tcpSocket:
              port: 5432
            periodSeconds: 15
          livenessProbe:
            tcpSocket:
              port: 5432
            periodSeconds: 30
