kubernetes/production/replica_count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-commerce-coupon
  namespace: core-commerce
spec:
  replicas: 10
